--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,8 +30,8 @@
 			<div class="container">
 				<div class="company-name">
 					<a href="{{ site.baseurl }}/"> <br>
-					<span class="dark-logo"><img width="104" height="38" src="{{ site.baseurl }}/images/logo/aloqh-u5aj1.svg" alt="TAPAS"></span>
-					<span class="light-logo"><img width="104" height="38" src="{{ site.baseurl }}/images/logo/aloqh-u5aj1.svg" alt="TAPAS"></span>
+					<span class="dark-logo"><img width="250" height="250" src="{{ site.baseurl }}/images/logo/aloqh-u5aj1.svg" alt="TAPAS"></span>
+					<span class="light-logo"><img width="250" height="250" src="{{ site.baseurl }}/images/logo/aloqh-u5aj1.svg" alt="TAPAS"></span>
 	
 					</a>
 				</div>
@@ -48,7 +48,7 @@
 				<ul class="footer-left-links">
 					{% for link in site.data.footer.left_links %}
 						<li>
-							<a {% if link.new_window %}target="_blank"{% endif %} href="{% include relative-src.html src=link.link %}" {% if link.social_icon %}class="{{ link.social_icon | slugify }}-icon"{% endif %}>
+							<a style="font-size: 20px" {% if link.new_window %}target="_blank"{% endif %} href="{% include relative-src.html src=link.link %}" {% if link.social_icon %}class="{{ link.social_icon | slugify }}-icon"{% endif %}>
 								{% if link.social_icon %}{% include social-icon.html icon=link.social_icon %}{% endif %}
 								{{ link.name }}
 							</a>
