--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,6 +23,8 @@
 			</script>
 			<script async src='https://www.google-analytics.com/analytics.js'></script>
 		{% endif %}
+
+		{% include analytics.html %}
 	</head>
 
 	<body>
