some landing pages changes

--- a/_sass/landing-page.scss
+++ b/_sass/landing-page.scss
@@ -3,6 +3,7 @@
 	text-align: center;
 	height: 100vh;
 	min-height: 550px;
+	max-height: 100px;
 	background-color: #333;
 	background-repeat: no-repeat;
 	background-size: cover;
