--- a/_sass/blog.scss
+++ b/_sass/blog.scss
@@ -1,6 +1,6 @@
 .blog-posts {
 	list-style: none;
-	padding: 0;
+	padding: 0pt;
 	margin: 0;
 	font-size: 1em;
 
@@ -16,7 +16,7 @@
 		}
 
 		.post-details {
-			padding-top: 15px;
+			padding-top: 0px;
 
 		}
 	}
@@ -89,7 +89,7 @@
 		padding: 0 0 40px 0;
 
 		.button {
-			margin: 30px 0 0 0;
+			margin: 0 0 0 0;
 		}
 	}
 }
