--- a/_sass/forms.scss
+++ b/_sass/forms.scss
@@ -4,8 +4,9 @@
 	border: 2px solid $brand-color;
 	transition: .2s ease-in-out;
 	display: inline-block;
-	padding: 16px 50px;
+	padding: 5px 40px;
 	background: #fff;
+	margin: 15px 0px 0px 5px;
 }
 
 .button a:hover, input[type=submit]:hover {
