--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -1,6 +1,7 @@
-$brand-color: #6ba1f3;
+$brand-color: #258c10;
 
 // Breakpoints
 $tablet: "(min-width: 450px)";
 $mid-point: "(min-width: 620px)";
 $desktop: "(min-width: 768px)";
+$mid-point2 : "620px";
