--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -1,12 +1,13 @@
 ---
 layout: default
+image: ../images/blog_cover1.jpeg
 ---
 
-<section class="hero" style="background-image: url(https://source.unsplash.com/MqJX_8EaStM/2000x1322)">
+<section class="hero" style="background-image: url(https://i0.wp.com/asiatimes.com/wp-content/uploads/2018/11/Mangroves-e1556874736228.jpg?w=1592&ssl=1)">
 	<div class="inner-hero text-container">
 		<div class="hero-text-container">
-			<h1>The latest news</h1>
-			<p class="subtext">Hear the latest progress on Frisco and tips on making life long friends.</p>
+			<h1>Blog Search</h1>
+			<p class="subtext">Search Blog posts by keyword</p>
 		</div>
 	</div>
 </section>
