--- a/_sass/navigation.scss
+++ b/_sass/navigation.scss
@@ -4,7 +4,7 @@
 	background-color: transparent;
 	a {
 		display: block;
-		padding: 30px 0;
+		padding: 0px 0;
 	}
 
 	@media #{$mid-point} {
@@ -12,6 +12,12 @@
 		padding: 0 20px;
 		a {
 			display: inline;
+			// padding-left: 20px;
+		}
+	}
+	@media #{$mobile} {
+		a {
+			padding: 30px 0 25px 20px;
 		}
 	}
 }
@@ -30,9 +36,13 @@ nav {
 		display: inline;
 	}
 
+	@media #{$mobile} {
+		top: 0;
+	}
+
 	a {
 		margin: 0 3px;
-		padding: 14px 10px;
+		padding: 14px 10px ;
 		border: 0;
 		display: none;
 
@@ -42,16 +52,20 @@ nav {
 			color: rgba(255,255,255,.8);
 		}
 
+		@media #{$mobile} {
+			background-color: rgba(255, 255, 255, 0.95);
+		}
+
 
 		&.nav-toggle {
 			display: inline;
 			position: absolute;
 			right: 10px;
-			top: -7px;
+			top: -27px;
 			font-size: 1.9em;
 			border: 0;
 			text-shadow: 0;
-			padding: 0 !important;
+			padding: 0  !important;
 			@media #{$mid-point} {
 				display: none;
 			}
@@ -65,6 +79,7 @@ nav {
 	a.active {
 		border-bottom: 5px solid #ffa74d;
 		padding-bottom: 25px;
+		width: 105%;
 	}
 
 }
