--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -4,4 +4,5 @@ $brand-color: #258c10;
 $tablet: "(min-width: 450px)";
 $mid-point: "(min-width: 620px)";
 $desktop: "(min-width: 768px)";
+$mobile: "(max-width: 620px)";
 $mid-point2 : "620px";
