added posters to blog

--- a/_sass/blog.scss
+++ b/_sass/blog.scss
@@ -152,3 +152,11 @@
 .pagination {
 	padding: 30px
 }
+
+
+.pdf-container {
+    display: flex;
+    justify-content: center; /* Centers horizontally */
+    align-items: center; /* Centers vertically */
+    height: 100vh; /* Full height of the viewport */
+}
