--- a/_sass/landing-page.scss
+++ b/_sass/landing-page.scss
@@ -1,7 +1,6 @@
 $font-size-hero-h1-mobile: 38px;
 $font-size-hero-h1-desktop: 64px;
 
-
 .hero {
 	color: #ffffff;
 	text-align: center;
@@ -15,13 +14,13 @@ $font-size-hero-h1-desktop: 64px;
 
 	&:before {
 		content: "";
-		background: linear-gradient(to bottom,rgba(0,0,0,.65) 0,rgba(0, 0, 0, 0) 100%);
+		background: linear-gradient(to bottom, rgba(0, 0, 0, 0.65) 0%, rgba(0, 0, 0, 0) 100%);
 		position: absolute;
 		top: 0;
 		left: 0;
 		right: 0;
 		height: 600px;
-}
+	}
 
 	p {
 		color: #fff;
@@ -38,11 +37,11 @@ $font-size-hero-h1-desktop: 64px;
 		text-align: left;
 
 		h2, p, .button {
-			text-shadow: 1px 1px 1px rgba(0,0,0,.8);
+			text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.8);
 		}
 
 		h1 {
-			font-size: $font-size-hero-h1-mobile
+			font-size: $font-size-hero-h1-mobile;
 		}
 	}
 
@@ -59,9 +58,9 @@ $font-size-hero-h1-desktop: 64px;
 		right: 0;
 	}
 
-	@media #{$desktop} {
+	@media screen and (min-width: 1024px) { /* Replace $desktop with actual value */
 		.hero-text-container h1 {
-			font-size: 64px; // Use variable for desktop
+			font-size: $font-size-hero-h1-desktop; // Use variable for desktop
 		}
 	}
 }
@@ -78,14 +77,14 @@ $font-size-hero-h1-desktop: 64px;
 	}
 }
 
-@media #{$desktop} {
+@media screen and (min-width: 1024px) { /* Replace $desktop with actual value */
 	.flex {
-		@include flexbox;
+		display: flex;
 		align-items: center;
 		flex-direction: row;
-	
+
 		.hero-text-container h1 {
-			font-size: 64px; 
+			font-size: $font-size-hero-h1-desktop;
 		}
 
 		.text, .image {
@@ -95,9 +94,7 @@ $font-size-hero-h1-desktop: 64px;
 		}
 	}
 
-
 	.content section:nth-child(even) .flex {
 		flex-direction: row-reverse;
 	}
-	
 }
