--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,48 +1,66 @@
 <!DOCTYPE html>
-
 <html lang="en">
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    
+    {% seo %}
+    {% feed_meta %}
+    
+    <link rel="apple-touch-icon" href="{{ site.baseurl }}/apple-touch-icon.png">
+    <link rel="icon" type="image/png" href="{{ site.baseurl }}/touch-icon.png" sizes="192x192">
+    <link rel="icon" type="image/png" href="{{ site.baseurl }}/images/favicon.png">
+    
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap">
+    <link rel="stylesheet" href="{{ site.baseurl }}/css/screen.css">
+    
+    {% if jekyll.environment == 'production' and site.google_analytics_key != '' %}
+        <script>
+            window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
+            ga('create', '{{ site.google_analytics_key }}', 'auto');
+            ga('send', 'pageview');
+        </script>
+        <script async src='https://www.google-analytics.com/analytics.js'></script>
+    {% endif %}
+    
+    {% include analytics.html %}
+    
+    {% if page.layout == "interactive_post" %}
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/leaflet@1.9.3/dist/leaflet.css"/>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"/>
+        <!-- <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css"/> -->
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.0/css/all.min.css"/>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Leaflet.awesome-markers/2.0.2/leaflet.awesome-markers.css"/>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/python-visualization/folium/folium/templates/leaflet.awesome.rotate.min.css"/>
+        <style>
+            .folium-map {
+                position: relative;
+                width: 100%;
+                height: 600px; /* Ensure the map has a height */
+            }
+        </style>
+		<script src="https://cdn.jsdelivr.net/npm/leaflet@1.9.3/dist/leaflet.js"></script>
+        <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/Leaflet.awesome-markers/2.0.2/leaflet.awesome-markers.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js"></script>
+    {% endif %}
+</head>
+<body>
+    <header id="mainHeader">
+        <div class="container">
+            <div class="company-name">
+                <a href="{{ site.baseurl }}/"> <br>
+                <span class="dark-logo"><img width="250" height="250" src="{{ site.baseurl }}/images/logo/light2.svg" alt="TAPAS"></span>
+                <span class="light-logo"><img width="250" height="250" src="{{ site.baseurl }}/images/logo/light2.svg" alt="TAPAS"></span>
+                </a>
+            </div>
+            {% include navigation.html %}
+            <p class="editor-link"><a style="display:inline;" href="cloudcannon:collections/_data/navigation.yml" class="btn"><strong>&#9998;</strong> Edit navigation</a></p>
+        </div>
+    </header>
 
-		{% seo %}
-		{% feed_meta %}
-
-		<link rel="apple-touch-icon" href="{{ site.baseurl }}/apple-touch-icon.png">
-		<link rel="icon" type="image/png" href="{{ site.baseurl }}/touch-icon.png" sizes="192x192">
-		<link rel="icon" type="image/png" href="{{ site.baseurl }}/images/favicon.png">
-
-		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap">
-		<link rel="stylesheet" href="{{ site.baseurl }}/css/screen.css">
-
-		{% if jekyll.environment == 'production' and site.google_analytics_key != '' %}
-			<script>
-				window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
-				ga('create', '{{ site.google_analytics_key }}', 'auto');
-				ga('send', 'pageview');
-			</script>
-			<script async src='https://www.google-analytics.com/analytics.js'></script>
-		{% endif %}
-
-		{% include analytics.html %}
-	</head>
-
-	<body>
-		<header id="mainHeader">
-			<div class="container">
-				<div class="company-name">
-					<a href="{{ site.baseurl }}/"> <br>
-					<span class="dark-logo"><img width="250" height="250" src="{{ site.baseurl }}/images/logo/light2.svg" alt="TAPAS"></span>
-					<span class="light-logo"><img width="250" height="250" src="{{ site.baseurl }}/images/logo/light2.svg" alt="TAPAS"></span>
-	
-					</a>
-				</div>
-				{% include navigation.html %}
-				<p class="editor-link"><a style="display:inline;" href="cloudcannon:collections/_data/navigation.yml" class="btn"><strong>&#9998;</strong> Edit navigation</a></p>
-			</div>
-		</header>
-
-		{{ content }}
+    {{ content }}
 
 		<footer>
 			<div class="container">
